force-app/main/default/objects/Opportunity_Status_Timer__c/Opportunity_Status_Timer__c.object-meta.xml
<CustomObject>
    <label>Opportunity Status Timer</label>
    <nameField>
        <displayFormat>OST-{00000000}</displayFormat>
        <label>Opportunity Status Timer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Status Timers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>