force-app/main/default/objects/Opportunity_Status_Timer__c/fields/Changed_Status__c.field-meta.xml
<CustomField>
    <fullName>Changed_Status__c</fullName>
    <label>Changed To Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>