force-app/main/default/objects/Opportunity_Status_Timer__c/fields/Prior_Status__c.field-meta.xml
<CustomField>
    <fullName>Prior_Status__c</fullName>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>