force-app/main/default/objects/Opportunity_Status_Timer__c/fields/Prior_Time__c.field-meta.xml
<CustomField>
    <fullName>Prior_Time__c</fullName>
    <label>Prior Time</label>
    <type>DateTime</type>
</CustomField>