force-app/main/default/objects/Opportunity_Status_Timer__c/fields/RelatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RelatedOpportunity__c</fullName>
    <label>RelatedOpportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Status Timers</relationshipLabel>
    <relationshipName>Opportunity_Status_Timers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>